<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/primary_light_black"
    android:id="@+id/navWorkExperience">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottomNavigation">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progressBackgroundTint="@color/primary_yellow"
                android:progressTint="@color/primary_yellow"
                android:max="99"
                android:progress="66"/>

            <CheckBox
                android:id="@+id/checkBoxDoesHaveWorkExperience"
                android:text="@string/checkBoxDoYouHaveWorkExperience"
                style="@style/checkbox" />

            <!--  WORK EXPERIENCE  -->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutWorkExperience"
                style="@style/layouts"
                android:visibility="gone">
                <TextView
                    style="@style/txtView"
                    android:text="@string/textViewWorkPlace"
                    android:layout_above="@+id/editTextWorkPlace"
                    />

                <EditText
                    android:id="@+id/editTextWorkPlace"
                    style="@style/editText"
                    android:hint="@string/editTextWorkPlace"
                    />

                <TextView
                    style="@style/txtView"
                    android:text="@string/textViewFrom"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/editTextFrom"
                    android:inputType="number"
                    style="@style/editText"
                    android:hint="@string/editTextFrom"
                    />

                <TextView
                    style="@style/txtView"
                    android:text="@string/textViewTo"
                    android:layout_marginTop="20dp"
                    />

                <EditText
                    android:id="@+id/editTextTo"
                    android:inputType="number"
                    style="@style/editText"
                    android:hint="@string/editTextTo"
                    />

                <TextView
                    style="@style/txtView"
                    android:text="@string/textViewRole"
                    android:layout_marginTop="20dp"/>

                <EditText
                    android:id="@+id/editTextRole"
                    style="@style/editText"
                    android:hint="@string/editTextRole"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- ADD & SAVE -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">
                    <Button
                        android:id="@+id/buttonSave"
                        style="@style/buttonStyle"
                        android:layout_marginRight="10dp"
                        android:text="@string/buttonSave"
                        />
                    <Button
                        android:id="@+id/buttonAdd"
                        style="@style/buttonStyle"
                        android:text="@string/buttonAdd"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@+id/buttonSave"
                        />
                </RelativeLayout>
            </RelativeLayout>

            <ListView
                android:id="@+id/listview"
                style="@style/listview"
                android:visibility="gone">
            </ListView>

        </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>

</RelativeLayout>